# atom8

./: README.md
backend/: README.md  main.py  pyproject.toml  requirements.txt  verify_pipeline.py
backend/processors/: api_processor.py  file_processor.py  ingestion.py  web_processor.py
backend/services/: llm_service.py  orchestrator.py  pdf_generator.py  whisper_service.py
backend/tools/: cleaner.py  extractor.py  merger.py  noise_remover.py  normalizer.py  validator.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnimatedBeam.tsx  Atom8AnimatedLogo.tsx  BeamDemo.tsx  ShimmerButton.tsx  atom8-logo.css  shimmer-button.css
frontend/src/components/Header/: index.tsx
frontend/src/components/IngestionPanel/: index.tsx
frontend/src/components/OutputsPanel/: index.tsx
frontend/src/components/ProcessMonitor/: CanvasControls.tsx  PipelineNode.tsx  SchemaNode.tsx  index.tsx
frontend/src/components/ResultPreview/: index.tsx
frontend/src/components/SchemaEditor/: index.tsx
frontend/src/components/SourcesPanel/: index.tsx
frontend/src/components/magicui/: animated-beam.tsx
frontend/src/components/ui/: RgbContainer.tsx  animated-beam.tsx
frontend/src/hooks/: usePipeline.ts
frontend/src/lib/: api.ts  websocket.ts
frontend/src/store/: useJobStore.ts
