[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "extract-msg>=0.55.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.21",
    "unstructured>=0.18.24",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]
