[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dateparser>=1.2.2",
    "extract-msg>=0.55.0",
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.6",
    "groq>=1.0.0",
    "groqy>=0.1.0",
    "langchain>=1.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "phonenumbers>=9.0.21",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "pytesseract>=0.3.13",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "unstructured>=0.18.24",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]
